[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Protagonist.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Protagonist" type="Spatial"]
script = ExtResource( 2 )

[node name="AreaHero" type="Area" parent="."]
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="AreaHero"]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.48474, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.483707, 0.708975, -0.669993 )
text = "Hammurappi"
font = SubResource( 2 )

[connection signal="area_entered" from="AreaHero" to="." method="_on_AreaHero_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
